add_library(address_iterator OBJECT	address_iterator.cc address_iterator.h)

add_library(event_generator OBJECT	event_generator.cc event_generator.h)

add_library(network_generator OBJECT	network_generator.cc network_generator.h)

add_library(position_generator OBJECT	position_generator.cc position_generator.h)