add_library(sarp_address OBJECT address.cc address.h)
add_library(sarp_global_address_update OBJECT global_address_update.cc global_address_update.h)
add_library(sarp_routing_table OBJECT routing_table.cc routing_table.h)
add_library(sarp_routing OBJECT routing.cc routing.h)
add_library(sarp_update_packet OBJECT update_packet.cc update_packet.h)
